more dep fixes